added filer fuctions,defined login,signup and also a welcome message to my user

--- a/todo_api/tasks/templates/tasks/home.html
+++ b/todo_api/tasks/templates/tasks/home.html
@@ -35,7 +35,9 @@
 <body>
     <div class="welcome">
         <h1>Welcome to To-Do Manager ✅</h1>
-        <p>This is your backend capstone project home page.</p>
+        <p>where you can trust us to be your brain in remembering,tracking and getting all your tasks done</p>
+        <h2>we are glad to have you with us</h2>
+        <a href="{% url 'login' %}">Login</a>
         <a href="/api/tasks/">View Tasks API</a>
     </div>
 </body>
