succefully completed my readme.md file and my test.py file

--- a/todo_api/tasks/templates/tasks/home.html
+++ b/todo_api/tasks/templates/tasks/home.html
@@ -34,7 +34,7 @@
 </head>
 <body>
     <div class="welcome">
-        <h1>Welcome to To-Do Manager ✅</h1>
+        <h1>Welcome to To-Do Manager </h1>
         <p>where you can trust us to be your brain in remembering,tracking and getting all your tasks done</p>
         <h2>we are glad to have you with us</h2>
         <a href="{% url 'login' %}">Login</a>
